--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-Flask==3.0.0
-python-dotenv==1.0.0
-Flask-SQLAlchemy==3.1.1
+Flask==2.0.1
+python-dotenv==0.19.0
+Flask-SQLAlchemy==2.5.1
 Pillow==10.1.0
 python-magic==0.4.27
-werkzeug==3.0.1
+Werkzeug==2.0.1
+gunicorn==20.1.0
+SQLAlchemy==1.4.23
